Allow YAML lang again, use canUse() where applicable